--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>VIKAS KHASA </h1>
         <p><em>FUTURE M.D. OF <strong><a href="https://appbrewery.com/">The app brewery </a></strong></em></p>
-        <p>My self <strong>VIKAS KHASA</strong>. I am purcing my b.tech from srm universty in Sonipat.</p>
+        <p>My self <strong>VIKAS KHASA</strong>. I am pursuing my b.tech from Geeta University in Sonipat.</p>
       </td>
     </tr>
   </table>
@@ -21,7 +21,7 @@
   <h3>Studing and Education</h3>
   <ui>
     <li>My schooling was done in VPS Baroda</li>
-    <li>For higher studies i went to srm </li>
+    <li>For higher studies I went to IIM </li>
   </ui>
   <hr>
   <h3>Work experince</h3>
