--- a/hobbies.html
+++ b/hobbies.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My hobbies</title>
+    <title>My Hobbies</title>
   </head>
   <body>
-    <h3>My Hobbies</h3>
+    <h3>My HOBBIES</h3>
     <ol>
       <li><a href="https://www.wikihow.com/Swim"> SWIMMING</a></li>
-      <li>shooting </li>
-      <li>Owned luxary car</li>
+      <li> SHOOTING </li>
+      <li> Owned Luxury Car</li>
     </ol>
   </body>
 </html>
